add responsive to login files

--- a/css/form/forgotPassword.css
+++ b/css/form/forgotPassword.css
@@ -25,6 +25,10 @@ body {
     height: auto;
 }
 
+.logo>img {
+    height: 100px;
+}
+
 .forgotPassword-container {
     height: 100%;
     width: 95%;
@@ -53,4 +57,17 @@ body {
     border: none;
     border-radius: 8px;
     padding: 10px 25px 10px 25px
+}
+
+@media(max-width:540px) {
+    .forgotPassword {
+        max-width: 80% !important;
+    }
+
+
+    .arrow {
+        
+        margin-right: 0;
+        margin-left: -5px;
+    }
 }
