--- a/css/form/resetPassword.css
+++ b/css/form/resetPassword.css
@@ -54,3 +54,19 @@ body {
     border-radius: 8px;
     padding: 10px 25px 10px 25px
 }
+
+@media(max-width:540px) {
+    .resetPassword {
+        max-width: 80% !important;
+    }
+
+
+    .arrow-container {
+        margin-top: 5px;
+        margin-right: -30px;
+    }
+
+    .headline {
+        font-size: 24px;
+    }
+}
