--- a/css/form/signUp.css
+++ b/css/form/signUp.css
@@ -33,13 +33,9 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-right: 50px;
 }
 
-.signUp-container {
-    width: 95%;
-    display: flex;
-    justify-content: center;
-}
 
 .signUp-btn {
     cursor: pointer;
@@ -48,4 +44,19 @@ body {
     border: none;
     border-radius: 8px;
     padding: 10px 25px 10px 25px
+}
+
+@media(max-width:540px) {
+    .signUp {
+        max-width: 80% !important;
+    }
+
+    .signUp-container {
+        margin: 0;
+    }
+
+    .arrow {
+        margin-top: -30px;
+        margin-right: -30px;
+    }
 }
