--- a/css/kanban/index.css
+++ b/css/kanban/index.css
@@ -101,7 +101,12 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
+}
+
+.inner-summary-container {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
 }
 
 .user-name {
@@ -125,13 +130,17 @@ body {
 }
 
 .task-urgent-left-part {
-    height: 90%;
+    height: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    border-right: 2px solid white;
-    padding-right: 10px;
+}
+
+.white-border {
+    height: 80%;
+    width: 2px;
+    background-color: white;
 }
 
 .summary-count-white {
@@ -142,12 +151,10 @@ body {
     color: white;
 }
 
-.summary-count-black {
-    
-}
+.summary-count-black {}
 
 .task-urgent-right-part {
-    height: 90%;
+    height: 80%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -156,4 +163,50 @@ body {
 .task-urgent-left-part-1 {
     display: flex;
     align-items: center;
+    height: 60.67px;
+}
+
+.task-urgent-left-part-2>p {
+    color: white;
+    margin-left: 15px;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.date {
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.deadline {
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.upper-task-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.lower-task-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.task-card-upper {
+    width: 150px;
+    height: 150px;
+    border: 1px solid gray;
+    border-radius: 16px;
+}
+
+.task-card-lower {
+    width: 150px;
+    height: 150px;
+    border: 1px solid gray;
+    border-radius: 16px;
 }
