--- a/css/kanban/index.css
+++ b/css/kanban/index.css
@@ -96,6 +96,7 @@ body {
 }
 
 .summary-container {
+    width: 90%;
     height: 90%;
     display: flex;
     justify-content: center;
@@ -125,7 +126,7 @@ body {
     align-items: center;
     justify-content: space-evenly;
     height: 150px;
-    width: 500px;
+    width: 65%;
     border-radius: 18px;
 }
 
@@ -138,6 +139,7 @@ body {
 }
 
 .white-border {
+    width: 45%;
     height: 80%;
     width: 2px;
     background-color: white;
@@ -151,7 +153,18 @@ body {
     color: white;
 }
 
-.summary-count-black {}
+.summary-img{
+    height: 60px;
+    width: 60px;
+}
+
+.summary-count-black {
+    margin-left: 8px;
+    margin-top: 8px;
+    font-size: 32px;
+    font-weight: bold;
+    color: black;
+}
 
 .task-urgent-right-part {
     height: 80%;
@@ -189,12 +202,14 @@ body {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 .lower-task-container {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .task-card-upper {
@@ -202,6 +217,19 @@ body {
     height: 150px;
     border: 1px solid gray;
     border-radius: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.task-to-do {
+    display: flex;
+    align-items: center;
+}
+
+.inner-task-card-upper {
+    height: 80%;
 }
 
 .task-card-lower {
@@ -209,4 +237,13 @@ body {
     height: 150px;
     border: 1px solid gray;
     border-radius: 16px;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.blue-text{
+    color: #4589FF;
 }
