--- a/css/kanban/index.css
+++ b/css/kanban/index.css
@@ -52,6 +52,10 @@ body {
     display: flex;
 }
 
+.sidebar-mobile {
+    display: none;
+}
+
 .sidebar {
     width: 20%;
     height: 100%;
@@ -121,6 +125,10 @@ body {
     font-size: 24px;
 }
 
+.mobile-headline {
+    font-size: 0px;
+}
+
 .task-urgent {
     cursor: pointer;
     background-color: #4589FF;
@@ -134,7 +142,7 @@ body {
 
 .task-urgent:hover {
     background-color: white;
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 .task-urgent-left-part {
@@ -187,7 +195,7 @@ body {
     height: 60.67px;
 }
 
-.task-urgent-left-part-2>p {
+.task-urgent-left-part-2 {
     color: white;
     margin-left: 15px;
     font-weight: bold;
@@ -235,7 +243,7 @@ body {
 
 .task-card-upper:hover {
     background-color: white;
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 .task-to-do {
@@ -245,6 +253,10 @@ body {
 }
 
 .inner-task-card-upper {
+    height: 70%;
+}
+
+.inner-task-card {
     height: 70%;
 }
 
@@ -263,11 +275,20 @@ body {
 
 .task-card-lower:hover {
     background-color: blue;
-    transform: scale(1.1);
+    transform: scale(1.05);
+}
+
+.img-hover-effects {
+    border: 2px solid white;
+    border-radius: 50%;
 }
 
 .blue-text {
     color: #4589FF;
+}
+
+.white-text {
+    color: white;
 }
 
 @media (max-width: 1124px) {
@@ -288,5 +309,170 @@ body {
     }
     .deadline {
         font-size: 15px;
+    }
+    .kanban-img {
+        width: 20px;
+        height: 20px;
+        margin: 0 2px;
+    }
+}
+
+
+/* Tablet-Version */
+
+@media (max-width: 874px) {
+    .kanban-main {
+        justify-content: center;
+    }
+    .gm-text {
+        display: none;
+    }
+    .mobile-headline {
+        width: 100%;
+        font-size: 16px !important;
+        margin-bottom: 0;
+    }
+    .sidebar {
+        display: none;
+    }
+    .summary-container {
+        height: 85%;
+        width: 100%;
+    }
+    .inner-summary-container {
+        width: 100%;
+    }
+    .upper-task-container {
+        flex-direction: column;
+    }
+    .task-urgent {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    .task-card-lower {
+        width: 115px;
+        height: 115px;
+    }
+    .task-card-upper {
+        width: 100%;
+        height: 90px;
+    }
+    .summary-img {
+        height: 40px;
+        width: auto;
+    }
+    .summary-count-black {
+        font-size: 24px;
+    }
+    .blue-text {
+        font-size: 12px;
+    }
+    .inner-task-card-upper {
+        height: 65%;
+        display: flex;
+    }
+    .task-text p {
+        font-size: 20px;
+        margin-left: 20px;
+    }
+    .task-text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 60px;
+    }
+    .img-count-container img {
+        height: 60px;
+        width: auto;
+    }
+    .img-count-container span {
+        font-size: 20px;
+    }
+    .sidebar-mobile {
+        display: flex;
+        width: 100%;
+    }
+    .kanban-btns {
+        display: flex;
+        width: 100%;
+    }
+    .kanban-link {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        border-top: 1px solid rgba(0, 0, 0, 0.2);
+        margin-bottom: 0px;
+    }
+}
+
+
+/* Handy-Version */
+
+@media (max-width: 600px) {
+    .kanban-navbar {
+        height: 10vh;
+    }
+    .kanban-main {
+        height: 90vh;
+    }
+    .logo {
+        height: 30px;
+        width: auto;
+    }
+    .task-urgent-left-part-2>p {
+        margin: 8px 0;
+    }
+    .task-urgent-left-part-1 img {
+        height: 55px;
+        width: auto;
+    }
+    .deadline {
+        margin-top: 2px;
+    }
+    .task-urgent {
+        height: 110px;
+    }
+    .task-card-lower {
+        margin-top: 0px;
+        height: 90px;
+        width: 200px;
+        margin-top: 5px;
+    }
+    .blue-text {
+        font-size: 10px;
+    }
+    .kanban-link {
+        margin: 25px 0;
+    }
+    .name {
+        display: none;
+    }
+}
+
+@media (max-width: 540px) {
+    .task-card-lower {
+        width: 180px;
+    }
+}
+
+@media (max-width: 480px) {
+    .task-card-lower {
+        width: 150px;
+    }
+}
+
+@media (max-width: 400px) {
+    .task-card-lower {
+        width: 120px;
+    }
+    .kanban-link {
+        margin-bottom: 0;
+    }
+    .kanban-link span {
+        font-size: 12px;
+    }
+    .task-urgent-left-part-2>p {
+        font-size: 14px;
     }
 }
