--- a/css/kanban/board.css
+++ b/css/kanban/board.css
@@ -17,14 +17,14 @@
 .board-task-title {}
 
 .board-task-img {
+    cursor: pointer;
     height: 32px;
     width: 32px;
 }
 
 .search-field {
     width: 350px;
-    margin-left: 50px;
-    margin-top: 75px;
+    margin-top: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -81,14 +81,20 @@
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     padding: 10px;
     border-radius: 16px;
+    margin: 10px
 }
 
 .task-headline {
     margin-bottom: 5px;
+    margin-top: 10px;
+}
+
+.board-headline-mobile {
+    display: none;
 }
 
 .task-topic {
-    width: 120px;
+    padding: 2px 10px;
     background-color: orange;
     text-align: center;
     border-radius: 8px;
@@ -101,9 +107,46 @@
     justify-content: space-between;
 }
 
+.addTask-amount {
+    padding-left: 15px;
+}
+
 .progress-bar {
     width: 60%;
     height: 5px;
     background-color: rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+}
+
+.board-user-img-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.priority-img {
+    margin-top: 10px;
+    margin-right: 25px;
+}
+
+@media (max-width: 874px) {
+    .board-task-container {
+        flex-direction: column;
+    }
+    .width-25 {
+        width: 100%;
+    }
+    .blue-text {
+        font-size: 16px;
+    }
+    .add-btn {
+        display: none;
+    }
+    .board-headline-mobile {
+        display: block;
+        margin-top: 20px;
+    }
+    .addTask-amount {
+        margin-right: 25px;
+    }
 }
