finish responsiveness of add task

--- a/css/form/forgotPassword.css
+++ b/css/form/forgotPassword.css
@@ -63,10 +63,13 @@ body {
     .forgotPassword {
         max-width: 80% !important;
     }
-
-
+    .headline {
+        font-size: 18px;
+    }
+    .send-me-btn {
+        padding: 5px 10px;
+    }
     .arrow {
-        
         margin-right: 0;
         margin-left: -5px;
     }
