--- a/css/form/login.css
+++ b/css/form/login.css
@@ -1,4 +1,5 @@
 body {
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,7 +34,7 @@ body {
 
 .login {
     height: 300px;
-    min-width: 450px;
+    width: 450px;
     box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
     border-radius: 30px;
     background-color: white;
@@ -135,7 +136,6 @@ body {
     border-radius: 8px;
     padding: 10px 25px 10px 25px;
     text-decoration: none;
-    
 }
 
 .login-btn:hover,
@@ -166,52 +166,43 @@ body {
 }
 
 @media(max-width:540px) {
-
     .login {
         height: 500px;
+        width: 90%;
     }
-
     .login-option {
         align-items: flex-start !important;
         flex-direction: column-reverse;
     }
-
     .login-btns {
         width: 95%;
         display: flex;
         justify-content: space-between;
         margin-top: 10px;
     }
-
     .forgot-password {
         margin-top: 20px;
     }
-
     .remember-option {
         margin-top: 20px;
         margin-bottom: 20px;
     }
-
     .login-btns {
         align-items: center;
         flex-direction: column;
     }
-
     .login-btn {
         margin-bottom: 20px;
         width: 100px;
         display: flex;
         justify-content: center;
     }
-
     .guest-btn {
         width: 100px;
     }
-
     .not-a-user {
         display: none;
     }
-
     .not-a-user-mobile {
         display: inline-block;
     }
