--- a/css/kanban/board.css
+++ b/css/kanban/board.css
@@ -14,7 +14,9 @@
     margin: 15px;
 }
 
-.board-task-title {}
+.board-task-title {
+    font-size: 16px;
+}
 
 .board-task-img {
     cursor: pointer;
@@ -129,16 +131,16 @@
     margin-right: 25px;
 }
 
-@media (max-width: 874px) {
+@media (max-width: 1124px) {
     .board-task-container {
         flex-direction: column;
     }
     .width-25 {
         width: 100%;
     }
-    .blue-text {
+    /* .blue-text {
         font-size: 16px;
-    }
+    } */
     .add-btn {
         display: none;
     }
