--- a/kanban_assets/kanban_css/board.css
+++ b/kanban_assets/kanban_css/board.css
@@ -69,6 +69,7 @@
 }
 
 .added-task {
+    cursor: pointer;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     padding: 10px;
     border-radius: 16px;
