--- a/kanban_assets/kanban_css/edit_task.css
+++ b/kanban_assets/kanban_css/edit_task.css
@@ -1,7 +1,10 @@
 .edit-task {
     position: absolute;
-    top: 15vh;
+    top: 20vh;
     width: 400px;
+    background-color: white;
+    border: 2px solid rgba(0,0,0,0.3);
+    border-radius: 8px;
 }
 
 .add-task-container-edit {
