--- a/kanban_assets/kanban_css/board.css
+++ b/kanban_assets/kanban_css/board.css
@@ -69,10 +69,11 @@
 }
 
 .added-task {
+    cursor: pointer;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     padding: 10px;
     border-radius: 16px;
-    margin: 10px
+    margin: 10px;
 }
 
 .task-headline {
@@ -119,6 +120,24 @@
     margin-top: 10px;
     margin-right: 25px;
 }
+
+#small-add-task {
+    height: 100%;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    overflow-y: scroll;
+}
+
+.small-add-task-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 
 @media (max-width: 1124px) {
     .board-task-container {
