--- a/kanban_assets/kanban_css/generalKanban.css
+++ b/kanban_assets/kanban_css/generalKanban.css
@@ -123,3 +123,38 @@
     align-items: center;
     justify-content: flex-end;
 }
+
+.logout {
+    background-color: white;
+    cursor: pointer;
+    z-index: 2;
+    padding: 10px 20px;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    border-radius: 8px;
+    position: absolute;
+    right: 30px;
+    bottom: -42px;
+}
+
+.logout:hover {
+    background-color: #D2E3FF;
+}
+
+.logout-mobile {
+    background-color: white;
+    cursor: pointer;
+    z-index: 2;
+    padding: 10px 20px;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    border-radius: 8px;
+    position: absolute;
+    right: 30px;
+    bottom: -100px;
+}
+
+.logout-mobile a {
+    text-decoration: none;
+    display: block;
+    margin: 5px 0;
+}
+
