--- a/kanban_assets/kanban_css/index.css
+++ b/kanban_assets/kanban_css/index.css
@@ -4,6 +4,7 @@ body {
 }
 
 .kanban-navbar {
+    position: relative;
     height: 15vh;
     width: 100%;
     background-color: #4589FF;
@@ -42,6 +43,7 @@ body {
 }
 
 .user-img {
+    cursor: pointer;
     height: 30px;
     border-radius: 50%;
     border: 3px solid white;
