drag and drop implemented

--- a/kanban_assets/kanban_css/generalKanban.css
+++ b/kanban_assets/kanban_css/generalKanban.css
@@ -158,3 +158,11 @@
     margin: 5px 0;
 }
 
+.user-icon {
+    padding: 5px;
+    letter-spacing: 2px;
+    color: white;
+    border-radius: 50%;
+    background-color: #4589FF;
+}
+
