--- a/kanban_assets/kanban_css/task-info.css
+++ b/kanban_assets/kanban_css/task-info.css
@@ -6,7 +6,7 @@
     padding: 5px;
 }
 
- #small-board-task-info {
+ .small-board-task-info {
     background-color: white;
     position: absolute;
     top: 20vh;
