add small edit task functionalities

--- a/kanban_assets/kanban_css/generalKanban.css
+++ b/kanban_assets/kanban_css/generalKanban.css
@@ -103,6 +103,12 @@
     margin: 15px;
 }
 
+.d-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .delete-btn {
     cursor: pointer;
     background-color: transparent;
