--- a/kanban_assets/kanban_css/task-info.css
+++ b/kanban_assets/kanban_css/task-info.css
@@ -48,3 +48,10 @@
     align-items: center;
     justify-content: flex-end;
 }
+
+.priority-btn-container a {
+    background-color: transparent;
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    padding: 5px 10px;
+}
