--- a/kanban_assets/kanban_css/generalKanban.css
+++ b/kanban_assets/kanban_css/generalKanban.css
@@ -208,6 +208,22 @@
     margin: 5px 0;
 }
 
+.user-logout-icon-container {
+    cursor: pointer;
+    border-radius: 50%;
+    border: 2px solid white;
+}
+
+.user-logout-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 45px;
+    height: 38px;
+    letter-spacing: 2px;
+    color: white;
+    border-radius: 50%;
+}
 
 .user-icon {
     display: flex;
@@ -215,7 +231,6 @@
     align-items: center;
     width: 45px;
     height: 38px;
-    /* padding: 8px; */
     letter-spacing: 2px;
     color: white;
     border-radius: 50%;
