completing to load user icons in general

--- a/kanban_assets/kanban_css/generalKanban.css
+++ b/kanban_assets/kanban_css/generalKanban.css
@@ -236,6 +236,17 @@
     border-radius: 50%;
 }
 
+.user-icon-task-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 45px;
+    height: 38px;
+    letter-spacing: 2px;
+    color: white;
+    border-radius: 50%;
+}
+
 .user-tasks {
     display: flex;
     align-items: center;
