add contact editing and more

--- a/kanban_assets/kanban_css/contact-information.css
+++ b/kanban_assets/kanban_css/contact-information.css
@@ -1,8 +1,10 @@
 .contact-information-upper-part {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
+
+
 
 .contact-information-name-container {
     display: flex;
