--- a/kanban_assets/kanban_css/contacts.css
+++ b/kanban_assets/kanban_css/contacts.css
@@ -2,6 +2,22 @@
     display: flex;
 }
 
+#small-add-task {
+    height: 99.2vh;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: white;
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+}
+
+.small-add-task-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 #contact-information {
     margin-top: 20px;
     margin: 0 auto;
