--- a/login_assets/login_css/generalForm.css
+++ b/login_assets/login_css/generalForm.css
@@ -33,3 +33,45 @@
     height: 2px;
     background-color: #4589FF;
 }
+
+.centered {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+.popups-flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.popups {
+    display: flex;
+    align-items: center;
+    color: white;
+    padding: 10px 5px;
+    background-color: #0038FF;
+    border: 1px solid none;
+    border-radius: 8px;
+}
+
+.popups-img {
+    margin-left: 10px;
+}
+
+body::-webkit-scrollbar {
+    width: 12px;               /* width of the entire scrollbar */
+  }
+  
+  body::-webkit-scrollbar-track {
+    background: orange;        /* color of the tracking area */
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    background-color: blue;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 3px solid orange;  /* creates padding around scroll thumb */
+  }
+
