--- a/kanban_assets/kanban_css/generalKanban.css
+++ b/kanban_assets/kanban_css/generalKanban.css
@@ -24,6 +24,18 @@
     font-size: 22px;
 }
 
+.z-index-1 {
+    z-index: -1;
+}
+
+.z-index-2 {
+    z-index: 2;
+}
+
+.box-shadow {
+    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
+}
+
 .hover-blue {
     background-color: #D2E3FF;
 }
