--- a/kanban_assets/kanban_css/contacts.css
+++ b/kanban_assets/kanban_css/contacts.css
@@ -124,6 +124,13 @@
     margin-left: 5px;
 }
 
+#contact-information-mobile {
+    padding: 20px;
+    background-color: white;
+    border-radius: 4px;
+    border: 2px solid rgba(0, 0, 0, 0.2);
+}
+
 @media (max-width: 1024px) {
     .contacts-left {
         width: 50%;
